# Algebra

./: -f elf64  .gitignore  CMakeLists.txt  README.md
NumType/: CMakeLists.txt
NumType/include/NumType/: NumType.h
NumType/include/NumType/impl/alg_t/: Complex_NumType.h  NumTypeOperators.h  Real_NumType.h  alg_t.h
NumType/include/NumType/impl/scalar/: ScalarType.h  StdScalarType.h
NumType/src/: NumType.cpp
NumType/src/impl/alg_t/: Complex_NumType.cpp  NumTypeOperators.cpp  Real_NumType.cpp
NumType/src/impl/scalar/: SimpleScalarType.cpp
NumType/test/: NumType_test.cpp
calc/Calculator/: CMakeLists.txt
calc/Calculator/include/Calculator/: Calculator.h
calc/Calculator/test/: Calculator_test.cpp
calc/lex/Lexer/: CMakeLists.txt
calc/lex/Lexer/include/Lexer/: ILexer.h  Lexer.h
calc/lex/Lexer/include/Lexer/impl/flex/: FlexLexerGenerated.h  Flex_Lexer.h
calc/lex/Lexer/src/: Lexer.cpp
calc/lex/Lexer/src/impl/flex/: FlexLexerGenerated.cpp  FlexLexerGenerated.l  Flex_Lexer.cpp  Flex_Lexer.l  scanner.ll
calc/lex/Lexer/test/: Lexer_test.cpp
calc/pars/Parser/: CMakeLists.txt
calc/pars/Parser/include/Parser/: IParser.h  Parser.h
calc/pars/Parser/include/Parser/impl/bison/: BisonParserGenerated.h  Bison_Parser.h
calc/pars/Parser/src/impl/bison/: BisonParserGenerated.cpp  Bison_Parser.y
calc/pars/Parser/test/: Parser_test.cpp
calc/tok/TokenGenerator/: CMakeLists.txt
calc/tok/TokenGenerator/include/TokenGenerator/: TokenGenerator.h
calc/tok/TokenGenerator/src/: TokenGenerator.cpp
calc/tok/TokenGenerator/test/: TokenGenerator_test.cpp
calc/tok/TokenRegexGenerator/: CMakeLists.txt
calc/tok/TokenRegexGenerator/include/TokenRegexGenerator/: TokenRegexGenerator.h
calc/tok/TokenRegexGenerator/src/: TokenRegexGenerator.cpp
calc/tok/TokenType/: CMakeLists.txt
calc/tok/TokenType/include/TokenType/: ITokenType.h  IdentifierTokenType.h  NumTokenType.h  OperatorTokenType.h  ParenTokenType.h  TerminationTokenType.h  TokenType.h  TokenTypeException.h
calc/tok/TokenType/include/TokenType/SpecificTokenType/: IdentifierTokenType.h  NumTokenType.h  OperatorTokenType.h  ParenTokenType.h  TerminationTokenType.h
calc/tok/TokenType/src/: TokenType.cpp
calc/tok/TokenType/test/: TokenType_test.cpp
except/AlgebraException/: CMakeLists.txt
except/AlgebraException/include/AlgebraException/: AlgebraException.h
except/AlgebraException/src/: AlgebraException.cpp
except/AlgebraException/test/: AlgebraException_test.cpp
include/algebra/: NumType.h  alg.h
num/Complex/: CMakeLists.txt
num/Complex/include/Complex/: Complex.h
num/Complex/test/: Complex_test.cpp
num/NumType/: CMakeLists.txt
num/NumType/include/NumType/: ALGEBRA.h  INumType.h  NumType.h  NumTypeException.h
num/NumType/include/NumType/impl/: Complex_NumType.h  NumTypeOperators.h  Real_NumType.h
num/NumType/test/: NumType_Double_Operators_test.cpp  NumType_test.cpp
num/Real/: CMakeLists.txt
num/Real/include/Real/: Real.h  Real_Double.h  Real_Template.h
num/Real/test/: Real_Double_ArithOp_test.cpp  Real_Double_Operators_test.cpp  Real_LongDouble_ArithOp_test.cpp  Real_test.cpp
num/ScalarType/: CMakeLists.txt
num/ScalarType/include/ScalarType/: IScalarType.h  ScalarType.h  StdScalarType.h
num/ScalarType/src/: StdScalarType.cpp
num/ScalarType/test/: ScalarType_test.cpp
num/scalar/ScalarType/include/ScalarType/: IScalarType.h  StdScalarType.h
num/scalar/ScalarType/src/: StdScalarType.cpp
num/scalar/ScalarType/test/: ScalarType_test.cpp
util/except/include/: AlgebraException.h
